# req-parser

./: .gitignore  main.py  pyproject.toml
.specify/memory/: constitution.md
backend/: README.md  env.example  pyproject.toml
backend/config/: extraction_config.yaml  llm_config.yaml
backend/src/: main.py
backend/src/api/: routes.py
backend/src/models/: database.py  ground_truth_data.py  processing_result.py  tender_data.py
backend/src/services/: document_processor.py  llm_extractor.py  validator.py
backend/src/utils/: logging_config.py  retry.py
backend/tests/contract/: test_evaluate_api.py  test_extract_api.py
backend/tests/debug/: test_api_debug.py  test_pdf_processing.py  test_simple_api.py
backend/tests/integration/: test_ground_truth.py  test_pipeline.py
backend/tests/performance/: test_document_processing_performance.py
backend/tests/unit/: test_document_processor.py  test_llm_extractor.py  test_llm_extractor_simple.py  test_logging_config.py  test_processing_result.py  test_retry.py  test_tender_data.py  test_validator.py  test_validator_simple.py
frontend/: .eslintrc.json  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
sample_data/: README.md  ground_truth_1.json  ground_truth_2.json  ground_truth_3.json  sample_tender_1.txt  sample_tender_2.txt  sample_tender_3.txt
specs/001-project-specification-tenderinsight/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-mock-tech-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+18 files in other folders)
